[project]
name = "energy-data-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mira", email = "mira.theidel@gmx.de" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[project.scripts]
energy-data-parser = "energy_data_parser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
